--- a/index.html
+++ b/index.html
@@ -47,25 +47,84 @@
                geocoder.geocode({address: text, componentRestrictions: { country: 'SG' }}, callResponse);
             }
 
+            var locationBackups = {};
+
             function getMemberLocation2(member) {
                return new Promise((resolve,reject) => {
                   if(!member.postal_code) {
                      return resolve(member)
                   }
 
-                  googleGeocoding(member.postal_code.toString(), function(results, status) {
-                     console.log(status)
-                     if (status === 'OK') {
-                        console.log(member.postal_code, results[0].geometry.location.lat())
-                        member['location'] = {
-                           lat: results[0].geometry.location.lat(),
-                           lng: results[0].geometry.location.lng()
+                  var postalCode = member.postal_code.toString();
+                  var postalCodeRef = database.ref('locations/' + postalCode);
+
+                  postalCodeRef.once('value')
+                     .then(function(snapshot) {
+                        var loc = snapshot.val();
+                        if(loc) {
+                           member['location'] = {
+                              lat: loc.lat,
+                              lng: loc.lng
+                           }
+                           console.log('udah ada');
+                           resolve(member)
+                        } else {
+                            googleGeocoding(member.postal_code.toString(), function(results, status) {
+                                console.log('req google',status)
+                                if (status === 'OK') {
+                                    member['location'] = {
+                                        lat: results[0].geometry.location.lat(),
+                                        lng: results[0].geometry.location.lng()
+                                    }
+                                    console.log(member.postal_code, member.location.lat, member.location.lng)
+                                    postalCodeRef.set({
+                                       postalCode,
+                                       lat: member.location.lat,
+                                       lng: member.location.lng
+                                    })
+                                    .then(function () { 
+                                       resolve(member) 
+                                    })
+                                } else {
+                                    resolve(member)
+                                }
+                            });
                         }
-                        resolve(member)
-                     } else {
-                        resolve(member)
-                     }
-                  });
+                     });
+               });
+            }
+
+           function getMemberLocationFromDatabase(member) {
+               return new Promise((resolve,reject) => {
+                  if(!member.postal_code) {
+                     return resolve(member)
+                  }
+
+                  var postalCode = member.postal_code.toString();
+                  var postalCodeRef = database.ref('locations/' + postalCode);
+
+                  if(locationBackups[postalCode]) {
+                        member['location'] = {
+                            lat: locationBackups[postalCode].lat,
+                            lng: locationBackups[postalCode].lng
+                        };
+                        return resolve(member);
+                  }
+
+                  postalCodeRef.once('value')
+                     .then(function(snapshot) {
+                        var loc = snapshot.val();
+                        if(loc) {
+                           member['location'] = {
+                              lat: loc.lat,
+                              lng: loc.lng
+                           }
+                           locationBackups[postalCode] = member.location                           
+                           resolve(member)
+                        } else {
+                            resolve(member);
+                        }
+                     });
                });
             }
 
@@ -86,7 +145,6 @@
                         } else {
                            $http.get(`http://nominatim.openstreetmap.org/search?format=json&postalcode=${postalCode}&countrycodes=sg`)
                               .then(function (response) {
-                                 console.log(postalCode,response.data)
                                  if(response.data.length) {
                                     member['location'] = {
                                        lat: parseFloat(response.data[0].lat),
@@ -114,22 +172,56 @@
             };
 
             var members = [];
+
+            function throttleLocation(all, index) {
+                    var promises = [];
+                    var mulai = index * 10;
+                    var semua = all.slice(mulai, mulai + 10)
+
+                    console.log('index', index, mulai, '->', mulai + 9);
+                    console.log('start :',semua[0].member_id, 'end :',semua[semua.length - 1].member_id)
+                    console.log(`stars [${mulai}]:`,all[mulai].member_id, `ens [${mulai+9}]:`,all[mulai + 9].member_id)
+
+                    _.each(semua, function(member){
+                        promises.push(getMemberLocation2(member))
+                    });
+
+                    Promise.all(promises)
+                        .then(() => {
+                            console.log('selese', semua);
+                            console.log('lanjut mang...')
+
+                            setTimeout(() => {
+                                if(all.length > (10 * (index + 1))) {
+                                    throttleLocation(all, index + 1)
+                                }
+                            },10000)
+                        })
+            }
+
             $http.get('http://localhost:8080/membership').then(function(response){
-               
-                var all = response.data.members.slice(0, 500);
-                var promises = [];
+                
+                var all = response.data.members.slice(0, 3000);
+                console.log(all.length,'from',response.data.members.length)
+                var promises = []
 
                 _.each(all, function(member){
-                    promises.push(getMemberLocation(member))
+                    promises.push(getMemberLocationFromDatabase(member))
                 });
+
 
                 Promise.all(promises)
                     .then(res => {
                         members = res.filter(el => el.location)
-                        console.log('total',members,members.length)
+                        console.log('available',members.length)
+                        var membersWithoutPostal = res.filter(el => !el.postal_code);
+                        console.log('no post',membersWithoutPostal.length)
+                        var membersWithoutLocation = res.filter(el => !el.location && el.postal_code);
+                        console.log('search',membersWithoutLocation.length);
+                        throttleLocation(membersWithoutLocation, 0)
 
                         var data = _.map(members, function(member){
-                            console.log(member.firstname, [member.location.lat, member.location.lng])
+                            // console.log(member.firstname, [member.location.lat, member.location.lng])
                             return [member.location.lat, member.location.lng];
                         });
 
