tweak heatmap gradient and radius

--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
                   type: 'heat',
                   data: data,
                   layerOptions: {
-                      radius: 60,
-                      blur: 60,
-                      gradient: {0.1: 'blue', 0.2: 'lime', 0.5: 'orange', 0.9: 'red'}
+                      radius: 10,
+                      blur: 10,
+                      minOpacity: 0.1,
+                      gradient: {0.3: 'blue', 0.5: 'lime', 0.8: 'orange', 1: 'red'}
                   },
                   visible: false,
               };
